# drakhtar-telemetry

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
.github/workflows/: continuous-integration.yml
include/: Configuration.h  Tracker.h
include/Persistence/: FilePersistence.h  IPersistence.h
include/Serialization/: ISerializer.h  IValue.h  IValueObject.h  IValueStream.h  JsonSerializer.h  Padding.h
include/Serialization/Json/: IJsonValue.h  JsonArrayStream.h  JsonObject.h  JsonSerializer.h
include/Serialization/Xml/: IXmlValue.h  XmlArrayStream.h  XmlObject.h  XmlSerializer.h
include/TrackerAssets/: DrakhtarTracker.h  ITrackerAsset.h  PlayTracker.h
include/TrackerEvents/: AttackEvent.h  BuyUnitsEvent.h  EndEvent.h  LevelEndEvent.h  LevelStartEvent.h  PauseEndEvent.h  PauseStartEvent.h  PlayerTurnEndEvent.h  PlayerTurnStartEvent.h  RoundEndEvent.h  RoundStartEvent.h  SessionEndEvent.h  SessionStartEvent.h  TrackerEvent.h
include/Utils/: IValue.h  IValueStream.h  JsonArrayStream.h  JsonObject.h
scripts/: windows-build.ps1  windows-format.ps1  windows-setup.cmd
src/: CMakeLists.txt  Configuration.cpp  Tracker.cpp
src/Persistence/: FilePersistence.cpp  IPersistence.cpp  IPersistence.h
src/Serialization/: ISerializer.h  JsonSerializer.cpp  JsonSerializer.h
src/Serialization/Json/: JsonArrayStream.cpp  JsonObject.cpp  JsonSerializer.cpp
src/Serialization/Xml/: XmlArrayStream.cpp  XmlObject.cpp  XmlSerializer.cpp
src/TrackerAssets/: DrakhtarTracker.cpp  PlayTracker.cpp  PlayTracker.h
src/TrackerEvents/: AttackEvent.cpp  BuyUnitsEvent.cpp  EndEvent.cpp  EndEvent.h  LevelEndEvent.cpp  LevelEndEvent.h  LevelStartEvent.cpp  LevelStartEvent.h  PauseEndEvent.cpp  PauseStartEvent.cpp  PlayerTurnEndEvent.cpp  PlayerTurnEndEvent.h  PlayerTurnStartEvent.cpp  PlayerTurnStartEvent.h  RoundEndEvent.cpp  RoundEndEvent.h  RoundStartEvent.cpp  SessionEndEvent.cpp  SessionEndEvent.h  SessionStartEvent.cpp  TrackerEvent.cpp  TrackerEvent.h
